# dlb

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  AUTHORS  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  Makefile.am  Makefile32  README  README.in  README.md  bootstrap  configure.ac  meson.build  meson_options.txt
doc/: Makefile.am
doc/doxygen/: Doxyfile.in  Doxyfile_man.in  Doxyfile_man1.in  Doxyfile_man3.in
doc/examples/: Makefile  patches_apply.sh  patches_gen.sh  pils.c  pils.cu
doc/guides/: coding-guidelines.md  mpi-database-generation.md
doc/misc/: design_dlb_v2.odg  how_to_run_with_dlb2.eps  how_to_run_with_dlb2.odg
doc/paraver_cfgs/: DLB_Give_Want_number_of_cpus.cfg  DLB_callbacks.cfg  DLB_cpus(16).cfg  DLB_cpus(4).cfg  DLB_cpus(8).cfg  DLB_idle_cpus.cfg  DLB_loop.cfg  DLB_mngo.cfg  DLB_mode.cfg  DLB_num_threads.cfg  DLB_rebind_threads.cfg  DLB_region_ipc.cfg  DLB_region_state.cfg  DLB_regions.cfg  DLB_runtime.cfg  DLB_thread_binding.cfg  MPI_Barrier_avg_time.cfg
doc/scripts/: lewi_omp.sh.in  lewi_omp_trace.sh.in  lewi_ompss.sh  lewi_ompss_trace.sh.in  talp.sh.in
doc/user_guide/: Makefile  requirements.txt
scripts/: Makefile.am  adderDLB  astyle-dlb.sh  bets  dlb.spec  gen_fortran_talp_test.py  git-version-gen  headache.cfg  headerfy.sh  headerfy_with_docker.sh  meson-dist-gen.sh  meson-set-dist-version.sh  parse_version.py  preamble.txt  pygen.py  pygen.py3  run_with_dlb.sh  run_with_dlb.sh.in  set_dlb.sh  set_dlb_mn3.sh  sort_mpicalls.py  write_script.sh  write_script_mn3.sh
scripts/debian/: control  rules
scripts/easybuild-easyconfigs/: dlb-3.1-gompi-2020.eb  dlb-3.1-iimpi-2020.eb  dlb-3.1-ipsmpi-2020.eb  dlb-3.1.eb  dlb-3.2-foss-2020.eb  dlb-3.2-gompi-2020.eb  dlb-3.2-gompi-2021.eb  dlb-3.2-iimpi-2020.eb  dlb-3.2-iimpi-2021.eb  dlb-3.2-ipsmpi-2020.eb  dlb-3.2-ipsmpi-2021.eb  dlb-3.2.eb  dlb-3.4-gompi-2023a.eb  dlb-3.5.0-gompi-2023b.eb  dlb-3.5.0-gompi-2024a.eb  dlb-3.5.0-iimpi-2023b.eb  dlb-3.5.0-iimpi-2024a.eb  dlb-3.5.2-cpeCray-24.03.eb  dlb-3.5.2-cpeGNU-24.03.eb  dlb-3.5.2-gompi-2024a.eb  dlb-3.5.2-iimpi-2024a.eb
scripts/patches/: dlb-3.5.2-fix-omptm-omp5-init.patch
scripts/spack-package/: package.py
scripts/viewer/: dlb_cpu_usage.in  dlb_viewer.py.in  dlb_wrapper.py  progressmeter.py
src/: Makefile.am
src/DPD/: DPD.c  DPD.h
src/LB_MPI/: DPD.c  DPD.h  MPI_calls_coded.c  MPI_calls_coded.c.in  MPI_calls_coded.h  MPI_calls_coded.h.in  MPI_intercept.c  MPI_intercept.c.in  MPI_interceptF.c.in  MPI_interceptF08.F90.in  MPI_interface.c  MPI_interface.c.in  MPI_interface.h  MPI_interface.h.in  MPI_interfaceF.c  MPI_interfaceF.c.in  MPI_interfaceF.h.in  mpicalls.json  mpicalls.txt  process_MPI.c  process_MPI.h
src/LB_comm/: comm.c  comm.h  comm_lend_light.c  comm_lend_light.h  comm_map.c  comm_map.h  comm_shMem.c  comm_shMem.h  comm_shMem_overflow.h  comm_shMem_states.c  shmem.c  shmem.h  shmem_async.c  shmem_async.h  shmem_barrier.c  shmem_barrier.h  shmem_bitset.c  shmem_bitset.h  shmem_cpuarray.c  shmem_cpuarray.h  shmem_cpuinfo.c  shmem_cpuinfo.h  shmem_drom.c  shmem_drom.h  shmem_lewi_async.c  shmem_lewi_async.h  shmem_lewi_mask.c  shmem_lewi_mask.h  shmem_mngo.c  shmem_mngo.h  shmem_procinfo.c  shmem_procinfo.h  shmem_stats.c  shmem_stats.h  shmem_talp.c  shmem_talp.h
src/LB_core/: DLB_dummy_interface.c  DLB_interface.c  DLB_interface.h  DLB_interfaceF.c  DLB_interface_drom.c  DLB_interface_sp.c  DLB_interface_stats.c  DLB_kernel.c  DLB_kernel.h  DLB_kernel_sp.c  DLB_kernel_sp.h  DLB_mngo.c  DLB_mngo.h  DLB_talp.c  DLB_talp.h  callbacks.h  dlb.h  dlb_drom.h  dlb_sp.h  dlb_stats.h  dlb_types.h  drom.c  drom.h  lb_funcs.c  lb_funcs.h  node_barrier.c  node_barrier.h  spd.c  spd.h  statistics.c  statistics.h  talp_types.h  thread_ctx.c  thread_ctx.h
src/LB_numThreads/: numThreads.c  numThreads.h  omp-tools.h  omp_thread_manager.c  omp_thread_manager.h  omp_tool.c  ompt-multiplex.h  ompt.c  ompt.h  omptm_free_agents.c  omptm_free_agents.h  omptm_omp5.c  omptm_omp5.h  omptm_role_shift.c  omptm_role_shift.h  omptool.c  omptool.h
src/LB_policies/: DWB_Eco.c  JustProf.c  JustProf.h  LeWI_active.c  LeWI_active.h  Lend.c  Lend_complex.c  Lend_cpu.c  Lend_light.c  Lend_light.h  Lend_simple.c  Lewi_map.c  Lewi_map.h  PERaL.c  PERaL.h  RaL.c  RaL.h  Weight.c  Weight.h  autonomous_lewi_mask.c  autonomous_lewi_mask.h  justMPI.c  lewi.c  lewi.h  lewi_async.c  lewi_async.h  lewi_mask.c  lewi_mask.h  new.c  new.h
src/apis/: DLB_interface.c  DLB_interface.h  DLB_interfaceF.c  DLB_interface_drom.c  DLB_interface_mngo.c  DLB_interface_sp.c  DLB_interface_stats.c  DLB_interface_talp.c  dlb.h  dlb.h.in  dlb_drom.h  dlb_errors.h  dlb_mngo.h  dlb_sp.h  dlb_stats.h  dlb_talp.h  dlb_types.h  dlbf-errors.h  dlbf.h  dlbf_drom.h  dlbf_mngo.h  dlbf_talp.h  meson.build
src/dlb/: DLB_dummy_interface.c  DLB_interface.c  DLB_interface.h  api.c  api.h  dlb.c  dlb.h  update_resources_stub.c
src/mngo/: mngo.c  mngo.h  mngo_balancer.c  mngo_balancer.h  mngo_drom.c  mngo_drom.h  mngo_metrics.c  mngo_metrics.h  mngo_regions.c  mngo_regions.h  mngo_resources.c  mngo_resources.h  mngo_talp.c  mngo_talp.h
src/mpi/: config_mpi.h.in  dlb_mpi_hooks_c.c.in  dlb_mpi_hooks_c.h.in  dlb_mpi_hooks_cdesc.c.in  dlb_mpi_hooks_f.c.in  dlb_mpi_hooks_f.h.in  mpi_calls_bindings.json  mpi_calls_coded.c.in  mpi_calls_coded.h.in  mpi_calls_metadata.json  mpi_core.c  mpi_core.h  mpi_wrappers_c.c.in  mpi_wrappers_f.c.in  mpi_wrappers_f08.F90.in  mpi_wrappers_f08_comm_spawn.F90  mpi_wrappers_f08_init.F90  mpi_wrappers_f08ts.F90.in
src/plugins/: cupti_plugin.c  gpu_record_utils.c  gpu_record_utils.h  plugin.h  plugin_manager.c  plugin_manager.h  plugin_utils.h  plugin_verbose.h  rocprofiler_sdk_configure.c  rocprofiler_sdk_plugin.c  rocprofilerv2_plugin.c
src/support/: array_template.h  atomic.h  debug.c  debug.h  dlb_api.h  dlb_common.h  env.c  env.h  error.c  error.h  globals.c  globals.h  gslist.c  gslist.h  gtree.c  gtree.h  gtypes.h  mask_utils.c  (+22 more)
talp-pages/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  tox.ini
tests/: Makefile.am  lit.site.cfg  meson.build
(+541 files in other folders)
